src/ui/components/page/page.less
.page {
    overflow: hidden;
    min-height: 100vh;
    color: @white;
    -webkit-tap-highlight-color: transparent;
    display: flex;
    position: relative;


    &_type_completed {
        @media screen and (orientation:portrait) {
            .brand {
                visibility: hidden;
            }

            .header {
                padding-bottom: 3.6vh;
            }

            .page__shadow {
                height: calc(~'7.2vh + 1.6rem');
                background-size: 100% 31vh;
            }
        }
    }

    &_type_about {
        display: block;
        /* position: relative; */
        /* overflow: hidden; */

        &.page:before {
            height: 60vh;
            background-repeat: no-repeat;
            background-position: bottom;

            @media screen and (orientation:landscape) {
                background-size: 100% auto;
            }
        }
    }

    &_type_not-supported {
        .header {
            display: none;
        }

        @media screen and (orientation:landscape) {
            .footer {
                display: none;
            }
        }
    }

    &__title {
        font-size: 2.8rem;
        letter-spacing: 1em / 100;
        text-shadow: @shadowZ1;
        color: @white;

        @media screen and (orientation:portrait) {
            display: none;
        }
    }

    @media screen and (orientation:landscape) {
        padding: 2.4rem 10vw;
        box-sizing: border-box;
        position: relative;
        min-width: 950px;
        align-content: space-between;
        flex-wrap: wrap;
    }

    @media screen and (orientation:portrait) {
        flex-direction: column;
    }

    &:before {
        content: '';
        position: absolute;

        background-image: url(./assets/low-poly-texture.jpg);
        background-position: center;
        z-index: -1;
        background-size: cover;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        transform: rotateY(180deg) rotateX(180deg);

        @media screen and (orientation:landscape) {
            opacity: 0.36;
        }

        /* TODO */
        @media screen and (orientation:portrait) {
            opacity: 0.2;
        }
    }

    &:after {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;

        background-color: @blue;
        z-index: -2;
    }

    &__shadow {
        background-image: linear-gradient(0deg, rgba(0,0,0,0.00) 0%, #000000 86%);
        opacity: 0.45;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        z-index: -1;

        @media screen and (orientation:landscape) {
            height: 18%;
        }

        @media screen and (orientation:portrait) {
            height: 31vh;
        }

    }

    &__star  {
        background-image: data-uri('src/ui/components/page/star.svg');
        width: 1rem;
        height: 1rem;
        position: absolute;
        z-index: -1;
        background-size: 100%;
        background-repeat: no-repeat;

        @media screen and (orientation:portrait) {
            display: none;
        }

        &_type_0 {
            opacity: 0.1;

            @media screen and (orientation:landscape) {
                top: 0.5rem;
                left: 2vw;
            }

            @media screen and (orientation:portrait) {
                display: block;
                left: 8vw;
                top: 1.8vh;
            }
        }

        &_type_1 {
            opacity: 0.25;

            @media screen and (orientation:landscape) {
                top: 1.5rem;
                left: 7vw;
            }

            @media screen and (orientation:portrait) {
                display: block;
                left: 21vw;
                top: 3.7vh;
            }
        }

        &_type_2 {
            @media screen and (orientation:landscape) {
                opacity: 0.5;
                top: 1.1rem;
                left: 17vw;
            }

            @media screen and (orientation:portrait) {
                opacity: 0.3;
                display: block;
                left: 35vw;
                top: 1.7vh;
            }
        }

        &_type_3 {
            @media screen and (orientation:landscape) {
                opacity: 0.1;
                top: 0.7rem;
                left: 30vw;
            }

            @media screen and (orientation:portrait) {
                opacity: 0.5;
                display: block;
                left: 75vw;
                top: 2vh;
            }
        }

        &_type_4 {
            opacity: 0.25;
            top: 1.7rem;
            left: 34vw;
        }

        &_type_5 {
            opacity: 0.1;
            top: 1.5rem;
            left: 44vw;
        }

        &_type_6 {
            opacity: 0.1;
            top: 0.6rem;
            left: 60vw;
        }

        &_type_7 {
            opacity: 0.25;
            top: 1.9rem;
            left: 64vw;
        }

        &_type_8 {
            opacity: 0.35;
            top: 1.3rem;
            left: 81vw;
        }

        &_type_9 {
            opacity: 0.15;
            top: 2.0rem;
            left: 95vw;
        }
    }
}

.footer {
    @media screen and (orientation:landscape) {
        flex:  0 0 100%;
    }

    @media screen and (orientation:portrait) {
        position: absolute;
        left: 0;
        right: 0;
        bottom: 0;

        &:after {
            z-index: -1;
            opacity: 0.5;
            background-image: data-uri('src/ui/components/page/skyline.svg');
            background-position: bottom;
            background-repeat: no-repeat;
            background-size: 100%;
            position: absolute;
            content: '';
            left: 0;
            right: 0;
            bottom: 0;
            height: 100vh;
        }
    }
}

.info {
    &__link {
        margin: -1em;
        padding: 1em;
        color: inherit;
        text-decoration: none;

        &:hover {
            color: @white;
        }
    }

    &__heart {
        display: inline-block;
        font-style: normal;
    }

    @media screen and (orientation:landscape) {
        color: fade(@white, 60%);
        font-size: 1.5rem;
        font-style: italic;
        text-align: right;

        &__heart {
            color: @red;
            margin-left: 0.5em;
            margin-right: 0.25em;
        }
    }

    @media screen and (orientation:portrait) {
        text-align: center;
        font-size: 1.2rem;
        color: fade(@white, 60);
        height: 8vw;
        line-height: 8vw;
        //hard code: center for current text,
        //should be universal when multi-lang
        margin-right: -2em;

        &__heart {
            color: fade(@red, 93);
            margin-left: 0.25em;
            margin-right: 0.25em;
        }
    }
}

